# quant_wiki

./: .gitignore  AGENTS.md  README.md  USAGE.md  kb.schema.md  pyproject.toml
agents/: agent-manifest.yaml  backtest.md  critic.md  factor.md  orchestrator.md  research.md  wiki-steward.md
docs/: agentic-flow.md
inbox/concepts/: barra-feng-xian-mo-xing-fen-jie-xian-shi.md  quan-yang-ben-dong-liang-yin-zi-rankic-j.md  xing-ye-zhong-xing-hua-hou-dong-liang-xi.md  zai-gao-huan-shou-lu-fen-wei-top-20-de-g.md
index/eval/: golden.jsonl
mcp_server/: server.py
samples/: 中信证券-动量因子-2024.md  华泰证券-风险平价-2024.md
src/kb/: __init__.py  agentic.py  ask.py  cli.py  compile.py  concepts.py  config.py  doctor.py  eval.py  factors.py  ingest.py  lint.py  llm.py  search.py  thread_review.py  threads.py
src/kb/index/: __init__.py  embed.py  meta.py  vectors.py
src/kb/parsers/: __init__.py  base.py  dispatcher.py  figures_vlm.py  office.py  pdf.py  plain.py
src/kb/utils/: frontmatter_io.py  hashing.py  ids.py  text.py
tests/: conftest.py  test_agentic.py  test_factor_link.py  test_ingest_search.py  test_mcp_smoke.py  test_phase2.py
wiki/.obsidian/: app.json  community-plugins.json  graph.json
wiki/_dashboard/: Home.md  选股 Domain.md
wiki/_templates/: Concept Card.md  Source Card.md  Thread.md
wiki/concepts/: concept-dong-liang-yin-zi-zai-gao-huan-shou-gu-piao-shang-de-shuai-j.md
wiki/sources/: src-2024-hua-tai-zheng-quan-feng-xian-ping-jie-2024-001.md  src-2024-zhong-xin-zheng-quan-dong-liang-yin-zi-2024-001.md
(+2 files in other folders)
